--- a/syles.css
+++ b/syles.css
@@ -8,6 +8,10 @@ body{
     overflow: hidden;
 }
 
+header{
+  background-color: rgba(0, 0, 0, 0.288);
+}
+
 .icono {
     width: 14vw;
     margin-right: 10vh;
@@ -154,6 +158,8 @@ body{
     body{
       background-color: rgb(8, 8, 60);
       background-image: none;
+      height: auto;
+      overflow-y: auto;
     }
 
 
@@ -170,15 +176,16 @@ body{
       margin: 0;  
     }
     h1{
-      width: 100%;
+      width: 80vw;
       text-align: center;
-      margin-top: 80px;
-      margin-left: 0;
+      margin: 10vw;
+      margin-top: 40vw;
+      font-size: 4vh;
     }
     h3{
-      width: 100%;
       text-align: center;
       margin: 0;
+      font-size: 4vw;
     }
 
     .boxSize{
@@ -187,7 +194,10 @@ body{
     }
 
     h7{
-      font-size: 7vw;
+      font-size: 8vw;
+    }
+    h4{
+      font-size: 5vw;
     }
     .mobileCenter{
       display: flex;
