--- a/syles.css
+++ b/syles.css
@@ -8,7 +8,6 @@ body{
     overflow: hidden;
 }
 
-
 .icono {
     width: 14vw;
     margin-right: 10vh;
@@ -158,10 +157,11 @@ body{
       height: auto;
       overflow-y: auto;
     }
-      
+
     header{
       background-color: rgba(0, 0, 0, 0.288);
     }
+
 
     .navButton ul {
       align-items: center;
@@ -240,6 +240,12 @@ body{
 
     .iconWP{
       width: 5vh;
+    }
+
+    .columnCenter{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
   }
