--- a/syles.css
+++ b/syles.css
@@ -4,7 +4,8 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     margin: 0;
-    height: 99vh;
+    width: 100%;
+    height: 100vh;
     overflow: hidden;
 }
 
@@ -76,7 +77,7 @@ body{
 
   h4{
     color: white;
-    font-size: 3.6vh;
+    font-size: 1.7vw;
   }
 
   .text{
@@ -84,8 +85,6 @@ body{
     margin-top: 3vh;
     margin-bottom: 3vh;
   }
-
-
 
   .iconWP{
     height: 5vh;
