--- a/syles.css
+++ b/syles.css
@@ -217,12 +217,12 @@ footer p {
       text-align: center;
       margin: 10vw;
       margin-top: 40vw;
-      font-size: 4vh;
+      font-size: 3.5vh;
     }
     h3{
       text-align: center;
-      margin: 0;
-      font-size: 4vw;
+      margin: 3vh;
+      font-size: 2.5vh;
     }
 
     .boxSize{
